--- a/release.gradle
+++ b/release.gradle
@@ -1,4 +1,3 @@
 // Common Android tasks for all releases that generate Javadocs, sources, etc.
-apply from: 'android-tasks.gradle'
-
-apply from: 'release-sonatype.gradle'
+apply from: 'https://github.com/LongHed/GradleLib/raw/master/android-tasks.gradle'
+apply from: 'https://github.com/LongHed/GradleLib/raw/master/release-sonatype.gradle'
